discussion/kv_engine/155804/155804_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42657: Make breakpad dumpCallback signal safe

Replace usage of spdlog with calls to write to stderr. spdlog
is not signal safe, it may allocate memory or perform other
library calls that may cause further issues to the crashed
process.

This results in the loss of a clear exit reason in the memcached
log and the loss of date stamped logging in the babysitter. In
place we will just get the crash message and backtrace in the
babysitter log.

Change-Id: Ic8f63e287606a62955bc8315f0c5cdd518542699

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-15 15:18:39.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 15:29:13.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36903/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/utilities/breakpad.cc(99): error C3861: "BP_STRLEN": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36903/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31528/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/breakpad.cc:57:10:
fatal error: "breakpad/include/common/linux/linux_libc_support.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31528/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9919/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:57:10: error: "breakpad/include/common/linux/linux_libc_support.h" file not found [clang-diagnostic-error]
#include "breakpad/include/common/linux/linux_libc_support.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9919/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:57:10:
error: "breakpad/include/common/linux/linux_libc_support.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9919/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11633/ : FAILURE

Compile error at [2021-06-15T15:20:42.568Z] ../kv_engine/utilities/breakpad.cc:57:10:
fatal error: breakpad/include/common/linux/linux_libc_support.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11633/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11479/ : FAILURE

Compile error at [2021-06-15T15:20:35.795Z] ../kv_engine/utilities/breakpad.cc:57:10:
fatal error: breakpad/include/common/linux/linux_libc_support.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11479/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11908/ : FAILURE

Compile error at [2021-06-15T15:20:06.038Z] ../kv_engine/utilities/breakpad.cc:57:10:
fatal error: "breakpad/include/common/linux/linux_libc_support.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11908/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19496/ : FAILURE

Compile error at [2021-06-15T15:21:40.986Z] ../kv_engine/utilities/breakpad.cc:57:10:
fatal error: "breakpad/include/common/linux/linux_libc_support.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19496/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8505/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/417/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10561/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
